tests/NormalTests/paczka1/fuzzy1/80396270.err
Error in line 1: ziWow S953 97,5
Error in line 3: ziWow A81 7,7
Error in line 8: ziWow S953 57,3
Error in line 31: ziWow S523 432,3
